--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
     <div id="container">
         <div class="signup">
-		<h2 class="form-title" id="signup">Sign up</h2>
+		<h2 class="form-title" id="signup" style="color: aliceblue;">Sign up</h2>
 		<div class="form-holder">
 			<input type="text" id="s_name" class="input" placeholder="Name" onfocus="myFunction(this)" />
 			<input type="email" id="s_email" class="input" placeholder="Email" onfocus="myFunction(this)"/>
